<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.activity.DetailsActivity"
    >
    <ScrollView
        android:id="@+id/layout_details"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activity.DetailsActivity">
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:background="?attr/colorPrimary"
                    android:layout_height="?attr/actionBarSize" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="16dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        >
                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_back_24"
                            android:tint="?attr/colorOnPrimary"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/back"/>
                        <TextView
                            android:id="@+id/tv_toolbar_name"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            tools:text="@string/dummy_name"
                            android:textColor="?attr/colorOnPrimary"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_weight="2"/>
                        <ImageButton
                            android:id="@+id/btn_fav"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_favorite_border_24"
                            android:backgroundTint="@android:color/transparent"
                            android:contentDescription="@string/favorite"
                            app:tint="?attr/colorOnPrimary"
                            android:padding="4dp"/>
                    </LinearLayout>
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/app_bar">
                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    tools:src="@tools:sample/avatars"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toBottomOf="@id/app_bar"
                    android:contentDescription="@string/character_avatar" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/dummy_name"
                        style="@style/TextTitle"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        />
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_species"
                        android:enabled="false"
                        android:backgroundTint="?attr/colorSecondaryFixed"
                        android:textColor="@color/md_theme_light_onSurface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/dummy_species"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/personal_data_shape"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="?attr/colorOutline"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingVertical="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textStyle="bold"
                            style="@style/TextBody"/>
                        <ImageView
                            android:id="@+id/iv_gender"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:scaleType="centerCrop"
                            tools:src="@tools:sample/avatars"
                            android:contentDescription="@string/gender" />
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="?attr/colorAccent"
                        android:layout_marginHorizontal="32dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingVertical="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/origin"
                            android:textStyle="bold"
                            style="@style/TextBody"/>
                        <TextView
                            android:id="@+id/tv_origin"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:maxLines="3"
                            android:ellipsize="end"
                            android:text="@string/dummy_origin"
                            android:gravity="center" />
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="?attr/colorAccent"
                        android:layout_marginHorizontal="32dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingVertical="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textStyle="bold"
                            style="@style/TextBody"/>
                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:maxLines="3"
                            android:ellipsize="end"
                            android:text="@string/dummy_origin"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <include layout="@layout/error_message"
        android:id="@+id/error_message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_gravity="center"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>