<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.activity.MainActivity">
    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            android:layout_weight="1"
            style="@style/TextBody"
            />
        <ImageButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_favorite_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/favorite"
            app:tint="?attr/colorOnPrimary"
            android:padding="4dp"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_search_bar"
        style="@style/TextAppearance.Material3.SearchBar"
        android:background="@drawable/rounded_shape"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:drawableStart="@drawable/baseline_search_24"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:drawableTint="?attr/colorPrimary"
        android:imeOptions="actionSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_character" />
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <include layout="@layout/error_message"
        android:id="@+id/error_message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>