<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_width="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            android:layout_height="?attr/actionBarSize" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:tint="?attr/colorOnPrimary"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back"/>
                <TextView
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/search"
                    android:textColor="?attr/colorOnPrimary"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_character"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:layout_gravity="center"/>
    <include layout="@layout/error_message"
        android:id="@+id/error_message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"/>
    <TextView
        android:id="@+id/tv_not_found"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/character_not_found"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"/>
</androidx.constraintlayout.widget.ConstraintLayout>